--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </audio>
 
     <head>
-        <title>titties</title>
+        <title>yiddies</title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
     </head>
@@ -21,6 +21,7 @@
         <img src="i lov selena.jpg" alt="selena" style="width:250px;height:400px;">
         <h1> i love my gf more tho</h1>    
         <img src="lesly.png" alt="lesly yass" style="width:250px;height:550px;">
+        <h1> i lov gatos :3 </h1>
        
     </body>
 </html>
