--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         <img src="i lov selena.jpg" alt="selena" style="width:250px;height:400px;">
         <h1> i love my gf more tho</h1>    
         <img src="lesly.png" alt="lesly yass" style="width:250px;height:550px;">
-        <h1> i lov gatos :3 </h1>
-       
+        <h1> i love gatos too tho</h1>       
     </body>
 </html>
