--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <h1> any hoes goes</h1>
         <button id="changeButton" onclick="changeColor()">Change Text</button>
-        <h1>with great power comes great big booty bitches</h1>
+        <h1>with great power comes great [redacted]</h1>
         <h1> welcome to the electric chair</h1>
         <img src="suki.jpg" alt="suki" style="width:300px;height:480px;">
         <h1> i love selena quintanilla</h1>    
