--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     </head>
 
     <body>
-        <h1> any hoes goes</h1>
+        <h1> hoes without the pose live in remorse of new toes </h1>
         <button id="changeButton" onclick="changeColor()">Change Text</button>
-        <h1>with great power comes great (redacted)</h1>
+        <h1>with great power comes great big booty bitches</h1>
         <h1> welcome to the electric chair</h1>
         <img src="suki.jpg" alt="suki" style="width:300px;height:480px;">
         <h1> i love selena quintanilla</h1>    
