--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     </head>
 
     <body>
-        <h1> hoes without the pose live in remorse of new toes </h1> <h1> i be eating culito</h1>
+        <h1> hoes without the pose live in remorse of new toes </h1>
         <button id="changeButton" onclick="changeColor()">Change Text</button>
         <h1>with great power comes great big booty bitches</h1>
-        <h1> welcome to the electric chair</h1>
+        <p style="text-align:right;"> i be eating culito</p>
+        <h1> welcome to the electric chair</h1> 
         <img src="suki.jpg" alt="suki" style="width:300px;height:480px;">
         <h1> i love selena quintanilla</h1>    
         <img src="i lov selena.jpg" alt="selena" style="width:250px;height:400px;">
